# defl-hotstuff

./: .gitignore  Cargo.toml  README.md  cifar10_config.json  defl_config.json  get_dirs.sh  node_params.json  run.sh  run_defl.py  run_defl.sh  run_py.sh  run_test_py.sh
benchmark/: .gitignore  cifar10_dataloader.py  client.py  client_test.py  create_tables.sql  fl_client.py  gen_config.py  test_client.py
benchmark/benchmark/: local.py
benchmark/committer/: __init__.py  committer.py  ipc_committer.py  utils.py
benchmark/configs/: cifar10_4_iid_gaussian.json  cifar10_4_iid_gaussian_fedavg.json  cifar10_4_iid_gaussian_multikrum.json  cifar10_4_iid_labelflip.json  cifar10_4_iid_labelflip_fedavg.json  cifar10_4_iid_labelflip_multikrum.json  cifar10_4_iid_noattack.json  cifar10_4_iid_noattack_fedavg.json  cifar10_4_iid_noattack_multikrum.json  cifar10_4_iid_signflip.json  cifar10_4_iid_signflip_fedavg.json  cifar10_4_iid_signflip_multikrum.json  sentiment140_config.json
benchmark/defl/: __init__.py  aggregator.py  trainer.py  types.py  weightpoisoner.py
benchmark/defl/committer/: __init__.py  committer.py  ipc_committer.py  local_committer.py  utils.py
benchmark/defl/dataloader/: __init__.py  cifar10_dataloader.py  dataloader.py  sentiment140_dataloader.py
benchmark/proto/: defl_pb2.py  defl_pb2.pyi
consensus/: Cargo.toml
consensus/src/: consensus.rs  messages.rs  proposer.rs
crypto/: Cargo.toml
measurement/: Cargo.toml
measurement/src/: main.rs
mempool/: Cargo.toml
mempool/src/: helper.rs  lib.rs  mempool.rs  parser.rs  transaction_filter.rs
mempool/src/tests/: mempool_tests.rs
network/: Cargo.toml
network/src/: receiver.rs  reliable_sender.rs  simple_sender.rs
node/: Cargo.toml
node/src/: client.rs  main.rs  node.rs
obsido/: Cargo.toml
obsido/src/: lib.rs
proto/: Cargo.toml  build.rs
proto/src/: defl.proto  defl_sender.rs  lib.rs
store/: Cargo.toml
