[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
bytes = "0.6.0"
# Only necessary if using Protobuf well-known types:
prost-types = "0.9.0"
thiserror = "1.0.30"

network = { path = '../network' }

[build-dependencies]
prost-build = { version = "0.9" }
