[package]
name = "proto"
version = "0.1.0"
edition = "2021"
authors = ["Yudong Han <maghsk2017@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
bytes = "0.6.0"
# Only necessary if using Protobuf well-known types:
prost-types = "0.10"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["sync"] }

network = { path = '../network' }

[build-dependencies]
prost-build = { version = "0.9" }
